se añaden imagenes a carpeta img y se crean los archivos .html y .css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <section>
+        <header>
+            <a href="#" class="logo">Sabrina Aigbogun Mouataz</a>
+            <ul class="navbar">
+                <li>a href="#"</a>Quién soy</li>
+                <li>a href="#"</a>CV</li>
+                <li>a href="#"</a>Proyectos destacados</li>
+                <li>a href="#"</a>Contacto</li>
+            </ul>
+        </header>
+        <div class="contenido"></div>
+    </section>
+
 </body>
 </html>
