Se actualiza el codigo con contacto.html y proyectos.html

--- a/index.html
+++ b/index.html
@@ -8,20 +8,56 @@
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
     <link rel="stylesheet" href="style.css">
-    <title>Landing Page</title>
+    <title>Landing Page</title> 
 </head>
 <body>
     <section>
         <header>
             <a href="#" class="logo">Sabrina Aigbogun Mouataz</a>
             <ul class="navbar">
-                <li>a href="#"</a>Quién soy</li>
-                <li>a href="#"</a>CV</li>
-                <li>a href="#"</a>Proyectos destacados</li>
-                <li>a href="#"</a>Contacto</li>
+                <li> <a href="#"> Quién soy</a>
+                </li>
+                <li> <a href="#"> CV</a>
+                </li>
+                <li> <a href="proyectos.html"> Proyectos destacados</a>
+                </li>
+                <li> <a href="contacto.html"> Contacto </a>
+                </li>
             </ul>
         </header>
-        <div class="contenido"></div>
+        <div class="contenido">
+            <Div class="tituloBox">
+            <h2>Junior Developer</h2>
+            <h2> <span>First Line Analyst Engineer</span> </h2>
+            <p class="frase">Desarrolladora</p>
+            <a href="#">Más sobre mí</a>
+            
+
+            </Div>
+            <div class="imgBox">
+                <img src="img/5052178.jpg" alt="">
+            </div>
+            <div class="copyright">
+                <p>&copy;Web creada para mi CV personal <br> Sabrina Aigbogun Mouataz 2025 </p>
+            </div>
+            <ul class="redesSociales">
+                <li>
+                    <a href="#">
+                        <ion-icon name="mail-unread-outline"></ion-icon>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <ion-icon name="call-outline"></ion-icon>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <ion-icon name="logo-github"></ion-icon>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </section>
 
 </body>
